# ai-playground

./: README.md  RULES.md  openclaw-directory-structure.md
ai-task-system/: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  fib.py  pyproject.toml  quick_sort.py
ai-task-system/frontend/: index.html
ai-task-system/tests/: __init__.py  conftest.py  test_adapters.py  test_benchmark.py  test_cli.py  test_command_builder.py  test_evaluator.py  test_executor.py  test_queue.py  test_retry.py  test_router.py  test_session_store.py
ai-task-system/v1/: README.md  evaluator.py  main.py  scheduler.py
ai-task-system/v2/: .gitignore  README.md  config.yaml  requirements.txt
ai-task-system/v2.2/: .gitignore  README.md  requirements.txt
ai-task-system/v2.2/backend/: database.py  evaluator.py  main.py
ai-task-system/v2.2/frontend/: index.html
ai-task-system/v2.3/: README.md  config.yaml  requirements.txt
ai-task-system/v2.3/backend/: __init__.py  database.py  retry.py  scheduler.py  sdk_executor.py
ai-task-system/v2.3/frontend/: index.html
ai-task-system/v2.3/tests/: __init__.py  test_api.py
ai-task-system/v2.4/: .gitignore  README.md  config.yaml  requirements.txt
ai-task-system/v2.4/backend/: __init__.py  cli_executor.py  config.py  database.py  evaluator.py  executor.py  main.py  prompts.py  retry.py  scheduler.py  websocket_manager.py
ai-task-system/v2.4/docs/: CLAUDE.md
ai-task-system/v2.4/frontend/: __init__.py  index.html
ai-task-system/v2.4/tests/: __init__.py
ai-task-system/v2/backend/: artifacts.py  (+12 more)
ai-task-system/v3/: .env.example  .gitignore  README.md  cli.py  main.py  requirements.txt
ai-task-system/v4/: CLAUDE.md  README.md  __main__.py  cli.py  repl.py  tui.py  tui_app.py
ai-task-system/v5/: README.md  __init__.py
(+187 files in other folders)
